--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 /* 1. VARIABLES DE DISEÑO */
 :root {
   --secondary-color: #6c757d;
-  --primary-color: #000;
   --light-color: #f8f9fa;
   --dark-color: #343a40;
   --font-family-base: 'Poppins', sans-serif;
@@ -28,7 +27,7 @@ body {
 }
 
 .navbar.scrolled {
-  background-color: #fff;
+  background-color: #ffffb8;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
 }
 
